parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file_input
Rule 1     file_input -> suite
Rule 2     block -> block_keyword fragment COLON NEWLINE INDENT suite DEDENT
Rule 3     block -> block_keyword fragment COLON suite
Rule 4     block -> block_keyword fragment COLON NEWLINE
Rule 5     block_keyword -> CLASS
Rule 6     block_keyword -> DEF
Rule 7     block_keyword -> IF
Rule 8     block_keyword -> ELIF
Rule 9     block_keyword -> ELSE
Rule 10    block_keyword -> TRY
Rule 11    block_keyword -> EXCEPT
Rule 12    block_keyword -> FINALLY
Rule 13    block_keyword -> WITH
Rule 14    block_keyword -> WHILE
Rule 15    block_keyword -> FOR
Rule 16    suite -> stmt
Rule 17    suite -> suite stmt
Rule 18    stmt -> fragment NEWLINE
Rule 19    stmt -> fragment ENDMARKER
Rule 20    stmt -> NEWLINE
Rule 21    stmt -> ENDMARKER
Rule 22    stmt -> block
Rule 23    fragment -> fragment LBRACE
Rule 24    fragment -> fragment RBRACE
Rule 25    fragment -> fragment STRING_END
Rule 26    fragment -> fragment STRING_CONTINUE
Rule 27    fragment -> fragment STRING
Rule 28    fragment -> fragment STRING_START_TRIPLE
Rule 29    fragment -> fragment WS
Rule 30    fragment -> fragment STRING_START_SINGLE
Rule 31    fragment -> fragment NUMBER
Rule 32    fragment -> fragment NAME
Rule 33    fragment -> fragment LPAR
Rule 34    fragment -> fragment RPAR
Rule 35    fragment -> fragment OPERATOR
Rule 36    fragment -> fragment LSQB
Rule 37    fragment -> fragment RSQB
Rule 38    fragment -> fragment COLON
Rule 39    fragment -> LBRACE
Rule 40    fragment -> RBRACE
Rule 41    fragment -> STRING_END
Rule 42    fragment -> STRING_CONTINUE
Rule 43    fragment -> STRING
Rule 44    fragment -> STRING_START_TRIPLE
Rule 45    fragment -> WS
Rule 46    fragment -> STRING_START_SINGLE
Rule 47    fragment -> NUMBER
Rule 48    fragment -> NAME
Rule 49    fragment -> LPAR
Rule 50    fragment -> RPAR
Rule 51    fragment -> LSQB
Rule 52    fragment -> RSQB
Rule 53    fragment -> COLON
Rule 54    fragment -> OPERATOR

Terminals, with rules where they appear

CLASS                : 5
COLON                : 2 3 4 38 53
DEDENT               : 2
DEF                  : 6
ELIF                 : 8
ELSE                 : 9
ENDMARKER            : 19 21
EXCEPT               : 11
FINALLY              : 12
FOR                  : 15
IF                   : 7
INDENT               : 2
LBRACE               : 23 39
LPAR                 : 33 49
LSQB                 : 36 51
NAME                 : 32 48
NEWLINE              : 2 4 18 20
NUMBER               : 31 47
OPERATOR             : 35 54
RBRACE               : 24 40
RPAR                 : 34 50
RSQB                 : 37 52
STRING               : 27 43
STRING_CONTINUE      : 26 42
STRING_END           : 25 41
STRING_START_SINGLE  : 30 46
STRING_START_TRIPLE  : 28 44
TRY                  : 10
WHILE                : 14
WITH                 : 13
WS                   : 29 45
error                : 

Nonterminals, with rules where they appear

block                : 22
block_keyword        : 2 3 4
file_input           : 0
fragment             : 2 3 4 18 19 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
stmt                 : 16 17
suite                : 1 2 3 17

Parsing method: LALR

state 0

    (0) S' -> . file_input
    (1) file_input -> . suite
    (16) suite -> . stmt
    (17) suite -> . suite stmt
    (18) stmt -> . fragment NEWLINE
    (19) stmt -> . fragment ENDMARKER
    (20) stmt -> . NEWLINE
    (21) stmt -> . ENDMARKER
    (22) stmt -> . block
    (23) fragment -> . fragment LBRACE
    (24) fragment -> . fragment RBRACE
    (25) fragment -> . fragment STRING_END
    (26) fragment -> . fragment STRING_CONTINUE
    (27) fragment -> . fragment STRING
    (28) fragment -> . fragment STRING_START_TRIPLE
    (29) fragment -> . fragment WS
    (30) fragment -> . fragment STRING_START_SINGLE
    (31) fragment -> . fragment NUMBER
    (32) fragment -> . fragment NAME
    (33) fragment -> . fragment LPAR
    (34) fragment -> . fragment RPAR
    (35) fragment -> . fragment OPERATOR
    (36) fragment -> . fragment LSQB
    (37) fragment -> . fragment RSQB
    (38) fragment -> . fragment COLON
    (39) fragment -> . LBRACE
    (40) fragment -> . RBRACE
    (41) fragment -> . STRING_END
    (42) fragment -> . STRING_CONTINUE
    (43) fragment -> . STRING
    (44) fragment -> . STRING_START_TRIPLE
    (45) fragment -> . WS
    (46) fragment -> . STRING_START_SINGLE
    (47) fragment -> . NUMBER
    (48) fragment -> . NAME
    (49) fragment -> . LPAR
    (50) fragment -> . RPAR
    (51) fragment -> . LSQB
    (52) fragment -> . RSQB
    (53) fragment -> . COLON
    (54) fragment -> . OPERATOR
    (2) block -> . block_keyword fragment COLON NEWLINE INDENT suite DEDENT
    (3) block -> . block_keyword fragment COLON suite
    (4) block -> . block_keyword fragment COLON NEWLINE
    (5) block_keyword -> . CLASS
    (6) block_keyword -> . DEF
    (7) block_keyword -> . IF
    (8) block_keyword -> . ELIF
    (9) block_keyword -> . ELSE
    (10) block_keyword -> . TRY
    (11) block_keyword -> . EXCEPT
    (12) block_keyword -> . FINALLY
    (13) block_keyword -> . WITH
    (14) block_keyword -> . WHILE
    (15) block_keyword -> . FOR

    NEWLINE         shift and go to state 30
    ENDMARKER       shift and go to state 11
    LBRACE          shift and go to state 5
    RBRACE          shift and go to state 7
    STRING_END      shift and go to state 20
    STRING_CONTINUE shift and go to state 10
    STRING          shift and go to state 12
    STRING_START_TRIPLE shift and go to state 33
    WS              shift and go to state 13
    STRING_START_SINGLE shift and go to state 8
    NUMBER          shift and go to state 22
    NAME            shift and go to state 34
    LPAR            shift and go to state 2
    RPAR            shift and go to state 1
    LSQB            shift and go to state 19
    RSQB            shift and go to state 16
    COLON           shift and go to state 17
    OPERATOR        shift and go to state 29
    CLASS           shift and go to state 27
    DEF             shift and go to state 31
    IF              shift and go to state 14
    ELIF            shift and go to state 28
    ELSE            shift and go to state 21
    TRY             shift and go to state 6
    EXCEPT          shift and go to state 3
    FINALLY         shift and go to state 23
    WITH            shift and go to state 25
    WHILE           shift and go to state 35
    FOR             shift and go to state 32

    suite                          shift and go to state 9
    fragment                       shift and go to state 24
    block_keyword                  shift and go to state 4
    stmt                           shift and go to state 15
    block                          shift and go to state 26
    file_input                     shift and go to state 18

state 1

    (50) fragment -> RPAR .

    NEWLINE         reduce using rule 50 (fragment -> RPAR .)
    ENDMARKER       reduce using rule 50 (fragment -> RPAR .)
    LBRACE          reduce using rule 50 (fragment -> RPAR .)
    RBRACE          reduce using rule 50 (fragment -> RPAR .)
    STRING_END      reduce using rule 50 (fragment -> RPAR .)
    STRING_CONTINUE reduce using rule 50 (fragment -> RPAR .)
    STRING          reduce using rule 50 (fragment -> RPAR .)
    STRING_START_TRIPLE reduce using rule 50 (fragment -> RPAR .)
    WS              reduce using rule 50 (fragment -> RPAR .)
    STRING_START_SINGLE reduce using rule 50 (fragment -> RPAR .)
    NUMBER          reduce using rule 50 (fragment -> RPAR .)
    NAME            reduce using rule 50 (fragment -> RPAR .)
    LPAR            reduce using rule 50 (fragment -> RPAR .)
    RPAR            reduce using rule 50 (fragment -> RPAR .)
    OPERATOR        reduce using rule 50 (fragment -> RPAR .)
    LSQB            reduce using rule 50 (fragment -> RPAR .)
    RSQB            reduce using rule 50 (fragment -> RPAR .)
    COLON           reduce using rule 50 (fragment -> RPAR .)


state 2

    (49) fragment -> LPAR .

    NEWLINE         reduce using rule 49 (fragment -> LPAR .)
    ENDMARKER       reduce using rule 49 (fragment -> LPAR .)
    LBRACE          reduce using rule 49 (fragment -> LPAR .)
    RBRACE          reduce using rule 49 (fragment -> LPAR .)
    STRING_END      reduce using rule 49 (fragment -> LPAR .)
    STRING_CONTINUE reduce using rule 49 (fragment -> LPAR .)
    STRING          reduce using rule 49 (fragment -> LPAR .)
    STRING_START_TRIPLE reduce using rule 49 (fragment -> LPAR .)
    WS              reduce using rule 49 (fragment -> LPAR .)
    STRING_START_SINGLE reduce using rule 49 (fragment -> LPAR .)
    NUMBER          reduce using rule 49 (fragment -> LPAR .)
    NAME            reduce using rule 49 (fragment -> LPAR .)
    LPAR            reduce using rule 49 (fragment -> LPAR .)
    RPAR            reduce using rule 49 (fragment -> LPAR .)
    OPERATOR        reduce using rule 49 (fragment -> LPAR .)
    LSQB            reduce using rule 49 (fragment -> LPAR .)
    RSQB            reduce using rule 49 (fragment -> LPAR .)
    COLON           reduce using rule 49 (fragment -> LPAR .)


state 3

    (11) block_keyword -> EXCEPT .

    LBRACE          reduce using rule 11 (block_keyword -> EXCEPT .)
    RBRACE          reduce using rule 11 (block_keyword -> EXCEPT .)
    STRING_END      reduce using rule 11 (block_keyword -> EXCEPT .)
    STRING_CONTINUE reduce using rule 11 (block_keyword -> EXCEPT .)
    STRING          reduce using rule 11 (block_keyword -> EXCEPT .)
    STRING_START_TRIPLE reduce using rule 11 (block_keyword -> EXCEPT .)
    WS              reduce using rule 11 (block_keyword -> EXCEPT .)
    STRING_START_SINGLE reduce using rule 11 (block_keyword -> EXCEPT .)
    NUMBER          reduce using rule 11 (block_keyword -> EXCEPT .)
    NAME            reduce using rule 11 (block_keyword -> EXCEPT .)
    LPAR            reduce using rule 11 (block_keyword -> EXCEPT .)
    RPAR            reduce using rule 11 (block_keyword -> EXCEPT .)
    LSQB            reduce using rule 11 (block_keyword -> EXCEPT .)
    RSQB            reduce using rule 11 (block_keyword -> EXCEPT .)
    COLON           reduce using rule 11 (block_keyword -> EXCEPT .)
    OPERATOR        reduce using rule 11 (block_keyword -> EXCEPT .)


state 4

    (2) block -> block_keyword . fragment COLON NEWLINE INDENT suite DEDENT
    (3) block -> block_keyword . fragment COLON suite
    (4) block -> block_keyword . fragment COLON NEWLINE
    (23) fragment -> . fragment LBRACE
    (24) fragment -> . fragment RBRACE
    (25) fragment -> . fragment STRING_END
    (26) fragment -> . fragment STRING_CONTINUE
    (27) fragment -> . fragment STRING
    (28) fragment -> . fragment STRING_START_TRIPLE
    (29) fragment -> . fragment WS
    (30) fragment -> . fragment STRING_START_SINGLE
    (31) fragment -> . fragment NUMBER
    (32) fragment -> . fragment NAME
    (33) fragment -> . fragment LPAR
    (34) fragment -> . fragment RPAR
    (35) fragment -> . fragment OPERATOR
    (36) fragment -> . fragment LSQB
    (37) fragment -> . fragment RSQB
    (38) fragment -> . fragment COLON
    (39) fragment -> . LBRACE
    (40) fragment -> . RBRACE
    (41) fragment -> . STRING_END
    (42) fragment -> . STRING_CONTINUE
    (43) fragment -> . STRING
    (44) fragment -> . STRING_START_TRIPLE
    (45) fragment -> . WS
    (46) fragment -> . STRING_START_SINGLE
    (47) fragment -> . NUMBER
    (48) fragment -> . NAME
    (49) fragment -> . LPAR
    (50) fragment -> . RPAR
    (51) fragment -> . LSQB
    (52) fragment -> . RSQB
    (53) fragment -> . COLON
    (54) fragment -> . OPERATOR

    LBRACE          shift and go to state 5
    RBRACE          shift and go to state 7
    STRING_END      shift and go to state 20
    STRING_CONTINUE shift and go to state 10
    STRING          shift and go to state 12
    STRING_START_TRIPLE shift and go to state 33
    WS              shift and go to state 13
    STRING_START_SINGLE shift and go to state 8
    NUMBER          shift and go to state 22
    NAME            shift and go to state 34
    LPAR            shift and go to state 2
    RPAR            shift and go to state 1
    LSQB            shift and go to state 19
    RSQB            shift and go to state 16
    COLON           shift and go to state 17
    OPERATOR        shift and go to state 29

    fragment                       shift and go to state 36

state 5

    (39) fragment -> LBRACE .

    NEWLINE         reduce using rule 39 (fragment -> LBRACE .)
    ENDMARKER       reduce using rule 39 (fragment -> LBRACE .)
    LBRACE          reduce using rule 39 (fragment -> LBRACE .)
    RBRACE          reduce using rule 39 (fragment -> LBRACE .)
    STRING_END      reduce using rule 39 (fragment -> LBRACE .)
    STRING_CONTINUE reduce using rule 39 (fragment -> LBRACE .)
    STRING          reduce using rule 39 (fragment -> LBRACE .)
    STRING_START_TRIPLE reduce using rule 39 (fragment -> LBRACE .)
    WS              reduce using rule 39 (fragment -> LBRACE .)
    STRING_START_SINGLE reduce using rule 39 (fragment -> LBRACE .)
    NUMBER          reduce using rule 39 (fragment -> LBRACE .)
    NAME            reduce using rule 39 (fragment -> LBRACE .)
    LPAR            reduce using rule 39 (fragment -> LBRACE .)
    RPAR            reduce using rule 39 (fragment -> LBRACE .)
    OPERATOR        reduce using rule 39 (fragment -> LBRACE .)
    LSQB            reduce using rule 39 (fragment -> LBRACE .)
    RSQB            reduce using rule 39 (fragment -> LBRACE .)
    COLON           reduce using rule 39 (fragment -> LBRACE .)


state 6

    (10) block_keyword -> TRY .

    LBRACE          reduce using rule 10 (block_keyword -> TRY .)
    RBRACE          reduce using rule 10 (block_keyword -> TRY .)
    STRING_END      reduce using rule 10 (block_keyword -> TRY .)
    STRING_CONTINUE reduce using rule 10 (block_keyword -> TRY .)
    STRING          reduce using rule 10 (block_keyword -> TRY .)
    STRING_START_TRIPLE reduce using rule 10 (block_keyword -> TRY .)
    WS              reduce using rule 10 (block_keyword -> TRY .)
    STRING_START_SINGLE reduce using rule 10 (block_keyword -> TRY .)
    NUMBER          reduce using rule 10 (block_keyword -> TRY .)
    NAME            reduce using rule 10 (block_keyword -> TRY .)
    LPAR            reduce using rule 10 (block_keyword -> TRY .)
    RPAR            reduce using rule 10 (block_keyword -> TRY .)
    LSQB            reduce using rule 10 (block_keyword -> TRY .)
    RSQB            reduce using rule 10 (block_keyword -> TRY .)
    COLON           reduce using rule 10 (block_keyword -> TRY .)
    OPERATOR        reduce using rule 10 (block_keyword -> TRY .)


state 7

    (40) fragment -> RBRACE .

    NEWLINE         reduce using rule 40 (fragment -> RBRACE .)
    ENDMARKER       reduce using rule 40 (fragment -> RBRACE .)
    LBRACE          reduce using rule 40 (fragment -> RBRACE .)
    RBRACE          reduce using rule 40 (fragment -> RBRACE .)
    STRING_END      reduce using rule 40 (fragment -> RBRACE .)
    STRING_CONTINUE reduce using rule 40 (fragment -> RBRACE .)
    STRING          reduce using rule 40 (fragment -> RBRACE .)
    STRING_START_TRIPLE reduce using rule 40 (fragment -> RBRACE .)
    WS              reduce using rule 40 (fragment -> RBRACE .)
    STRING_START_SINGLE reduce using rule 40 (fragment -> RBRACE .)
    NUMBER          reduce using rule 40 (fragment -> RBRACE .)
    NAME            reduce using rule 40 (fragment -> RBRACE .)
    LPAR            reduce using rule 40 (fragment -> RBRACE .)
    RPAR            reduce using rule 40 (fragment -> RBRACE .)
    OPERATOR        reduce using rule 40 (fragment -> RBRACE .)
    LSQB            reduce using rule 40 (fragment -> RBRACE .)
    RSQB            reduce using rule 40 (fragment -> RBRACE .)
    COLON           reduce using rule 40 (fragment -> RBRACE .)


state 8

    (46) fragment -> STRING_START_SINGLE .

    NEWLINE         reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    ENDMARKER       reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    LBRACE          reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    RBRACE          reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    STRING_END      reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    STRING_CONTINUE reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    STRING          reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    STRING_START_TRIPLE reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    WS              reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    STRING_START_SINGLE reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    NUMBER          reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    NAME            reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    LPAR            reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    RPAR            reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    OPERATOR        reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    LSQB            reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    RSQB            reduce using rule 46 (fragment -> STRING_START_SINGLE .)
    COLON           reduce using rule 46 (fragment -> STRING_START_SINGLE .)


state 9

    (1) file_input -> suite .
    (17) suite -> suite . stmt
    (18) stmt -> . fragment NEWLINE
    (19) stmt -> . fragment ENDMARKER
    (20) stmt -> . NEWLINE
    (21) stmt -> . ENDMARKER
    (22) stmt -> . block
    (23) fragment -> . fragment LBRACE
    (24) fragment -> . fragment RBRACE
    (25) fragment -> . fragment STRING_END
    (26) fragment -> . fragment STRING_CONTINUE
    (27) fragment -> . fragment STRING
    (28) fragment -> . fragment STRING_START_TRIPLE
    (29) fragment -> . fragment WS
    (30) fragment -> . fragment STRING_START_SINGLE
    (31) fragment -> . fragment NUMBER
    (32) fragment -> . fragment NAME
    (33) fragment -> . fragment LPAR
    (34) fragment -> . fragment RPAR
    (35) fragment -> . fragment OPERATOR
    (36) fragment -> . fragment LSQB
    (37) fragment -> . fragment RSQB
    (38) fragment -> . fragment COLON
    (39) fragment -> . LBRACE
    (40) fragment -> . RBRACE
    (41) fragment -> . STRING_END
    (42) fragment -> . STRING_CONTINUE
    (43) fragment -> . STRING
    (44) fragment -> . STRING_START_TRIPLE
    (45) fragment -> . WS
    (46) fragment -> . STRING_START_SINGLE
    (47) fragment -> . NUMBER
    (48) fragment -> . NAME
    (49) fragment -> . LPAR
    (50) fragment -> . RPAR
    (51) fragment -> . LSQB
    (52) fragment -> . RSQB
    (53) fragment -> . COLON
    (54) fragment -> . OPERATOR
    (2) block -> . block_keyword fragment COLON NEWLINE INDENT suite DEDENT
    (3) block -> . block_keyword fragment COLON suite
    (4) block -> . block_keyword fragment COLON NEWLINE
    (5) block_keyword -> . CLASS
    (6) block_keyword -> . DEF
    (7) block_keyword -> . IF
    (8) block_keyword -> . ELIF
    (9) block_keyword -> . ELSE
    (10) block_keyword -> . TRY
    (11) block_keyword -> . EXCEPT
    (12) block_keyword -> . FINALLY
    (13) block_keyword -> . WITH
    (14) block_keyword -> . WHILE
    (15) block_keyword -> . FOR

    $end            reduce using rule 1 (file_input -> suite .)
    NEWLINE         shift and go to state 30
    ENDMARKER       shift and go to state 11
    LBRACE          shift and go to state 5
    RBRACE          shift and go to state 7
    STRING_END      shift and go to state 20
    STRING_CONTINUE shift and go to state 10
    STRING          shift and go to state 12
    STRING_START_TRIPLE shift and go to state 33
    WS              shift and go to state 13
    STRING_START_SINGLE shift and go to state 8
    NUMBER          shift and go to state 22
    NAME            shift and go to state 34
    LPAR            shift and go to state 2
    RPAR            shift and go to state 1
    LSQB            shift and go to state 19
    RSQB            shift and go to state 16
    COLON           shift and go to state 17
    OPERATOR        shift and go to state 29
    CLASS           shift and go to state 27
    DEF             shift and go to state 31
    IF              shift and go to state 14
    ELIF            shift and go to state 28
    ELSE            shift and go to state 21
    TRY             shift and go to state 6
    EXCEPT          shift and go to state 3
    FINALLY         shift and go to state 23
    WITH            shift and go to state 25
    WHILE           shift and go to state 35
    FOR             shift and go to state 32

    stmt                           shift and go to state 37
    fragment                       shift and go to state 24
    block                          shift and go to state 26
    block_keyword                  shift and go to state 4

state 10

    (42) fragment -> STRING_CONTINUE .

    NEWLINE         reduce using rule 42 (fragment -> STRING_CONTINUE .)
    ENDMARKER       reduce using rule 42 (fragment -> STRING_CONTINUE .)
    LBRACE          reduce using rule 42 (fragment -> STRING_CONTINUE .)
    RBRACE          reduce using rule 42 (fragment -> STRING_CONTINUE .)
    STRING_END      reduce using rule 42 (fragment -> STRING_CONTINUE .)
    STRING_CONTINUE reduce using rule 42 (fragment -> STRING_CONTINUE .)
    STRING          reduce using rule 42 (fragment -> STRING_CONTINUE .)
    STRING_START_TRIPLE reduce using rule 42 (fragment -> STRING_CONTINUE .)
    WS              reduce using rule 42 (fragment -> STRING_CONTINUE .)
    STRING_START_SINGLE reduce using rule 42 (fragment -> STRING_CONTINUE .)
    NUMBER          reduce using rule 42 (fragment -> STRING_CONTINUE .)
    NAME            reduce using rule 42 (fragment -> STRING_CONTINUE .)
    LPAR            reduce using rule 42 (fragment -> STRING_CONTINUE .)
    RPAR            reduce using rule 42 (fragment -> STRING_CONTINUE .)
    OPERATOR        reduce using rule 42 (fragment -> STRING_CONTINUE .)
    LSQB            reduce using rule 42 (fragment -> STRING_CONTINUE .)
    RSQB            reduce using rule 42 (fragment -> STRING_CONTINUE .)
    COLON           reduce using rule 42 (fragment -> STRING_CONTINUE .)


state 11

    (21) stmt -> ENDMARKER .

    NEWLINE         reduce using rule 21 (stmt -> ENDMARKER .)
    ENDMARKER       reduce using rule 21 (stmt -> ENDMARKER .)
    LBRACE          reduce using rule 21 (stmt -> ENDMARKER .)
    RBRACE          reduce using rule 21 (stmt -> ENDMARKER .)
    STRING_END      reduce using rule 21 (stmt -> ENDMARKER .)
    STRING_CONTINUE reduce using rule 21 (stmt -> ENDMARKER .)
    STRING          reduce using rule 21 (stmt -> ENDMARKER .)
    STRING_START_TRIPLE reduce using rule 21 (stmt -> ENDMARKER .)
    WS              reduce using rule 21 (stmt -> ENDMARKER .)
    STRING_START_SINGLE reduce using rule 21 (stmt -> ENDMARKER .)
    NUMBER          reduce using rule 21 (stmt -> ENDMARKER .)
    NAME            reduce using rule 21 (stmt -> ENDMARKER .)
    LPAR            reduce using rule 21 (stmt -> ENDMARKER .)
    RPAR            reduce using rule 21 (stmt -> ENDMARKER .)
    LSQB            reduce using rule 21 (stmt -> ENDMARKER .)
    RSQB            reduce using rule 21 (stmt -> ENDMARKER .)
    COLON           reduce using rule 21 (stmt -> ENDMARKER .)
    OPERATOR        reduce using rule 21 (stmt -> ENDMARKER .)
    CLASS           reduce using rule 21 (stmt -> ENDMARKER .)
    DEF             reduce using rule 21 (stmt -> ENDMARKER .)
    IF              reduce using rule 21 (stmt -> ENDMARKER .)
    ELIF            reduce using rule 21 (stmt -> ENDMARKER .)
    ELSE            reduce using rule 21 (stmt -> ENDMARKER .)
    TRY             reduce using rule 21 (stmt -> ENDMARKER .)
    EXCEPT          reduce using rule 21 (stmt -> ENDMARKER .)
    FINALLY         reduce using rule 21 (stmt -> ENDMARKER .)
    WITH            reduce using rule 21 (stmt -> ENDMARKER .)
    WHILE           reduce using rule 21 (stmt -> ENDMARKER .)
    FOR             reduce using rule 21 (stmt -> ENDMARKER .)
    $end            reduce using rule 21 (stmt -> ENDMARKER .)
    DEDENT          reduce using rule 21 (stmt -> ENDMARKER .)


state 12

    (43) fragment -> STRING .

    NEWLINE         reduce using rule 43 (fragment -> STRING .)
    ENDMARKER       reduce using rule 43 (fragment -> STRING .)
    LBRACE          reduce using rule 43 (fragment -> STRING .)
    RBRACE          reduce using rule 43 (fragment -> STRING .)
    STRING_END      reduce using rule 43 (fragment -> STRING .)
    STRING_CONTINUE reduce using rule 43 (fragment -> STRING .)
    STRING          reduce using rule 43 (fragment -> STRING .)
    STRING_START_TRIPLE reduce using rule 43 (fragment -> STRING .)
    WS              reduce using rule 43 (fragment -> STRING .)
    STRING_START_SINGLE reduce using rule 43 (fragment -> STRING .)
    NUMBER          reduce using rule 43 (fragment -> STRING .)
    NAME            reduce using rule 43 (fragment -> STRING .)
    LPAR            reduce using rule 43 (fragment -> STRING .)
    RPAR            reduce using rule 43 (fragment -> STRING .)
    OPERATOR        reduce using rule 43 (fragment -> STRING .)
    LSQB            reduce using rule 43 (fragment -> STRING .)
    RSQB            reduce using rule 43 (fragment -> STRING .)
    COLON           reduce using rule 43 (fragment -> STRING .)


state 13

    (45) fragment -> WS .

    NEWLINE         reduce using rule 45 (fragment -> WS .)
    ENDMARKER       reduce using rule 45 (fragment -> WS .)
    LBRACE          reduce using rule 45 (fragment -> WS .)
    RBRACE          reduce using rule 45 (fragment -> WS .)
    STRING_END      reduce using rule 45 (fragment -> WS .)
    STRING_CONTINUE reduce using rule 45 (fragment -> WS .)
    STRING          reduce using rule 45 (fragment -> WS .)
    STRING_START_TRIPLE reduce using rule 45 (fragment -> WS .)
    WS              reduce using rule 45 (fragment -> WS .)
    STRING_START_SINGLE reduce using rule 45 (fragment -> WS .)
    NUMBER          reduce using rule 45 (fragment -> WS .)
    NAME            reduce using rule 45 (fragment -> WS .)
    LPAR            reduce using rule 45 (fragment -> WS .)
    RPAR            reduce using rule 45 (fragment -> WS .)
    OPERATOR        reduce using rule 45 (fragment -> WS .)
    LSQB            reduce using rule 45 (fragment -> WS .)
    RSQB            reduce using rule 45 (fragment -> WS .)
    COLON           reduce using rule 45 (fragment -> WS .)


state 14

    (7) block_keyword -> IF .

    LBRACE          reduce using rule 7 (block_keyword -> IF .)
    RBRACE          reduce using rule 7 (block_keyword -> IF .)
    STRING_END      reduce using rule 7 (block_keyword -> IF .)
    STRING_CONTINUE reduce using rule 7 (block_keyword -> IF .)
    STRING          reduce using rule 7 (block_keyword -> IF .)
    STRING_START_TRIPLE reduce using rule 7 (block_keyword -> IF .)
    WS              reduce using rule 7 (block_keyword -> IF .)
    STRING_START_SINGLE reduce using rule 7 (block_keyword -> IF .)
    NUMBER          reduce using rule 7 (block_keyword -> IF .)
    NAME            reduce using rule 7 (block_keyword -> IF .)
    LPAR            reduce using rule 7 (block_keyword -> IF .)
    RPAR            reduce using rule 7 (block_keyword -> IF .)
    LSQB            reduce using rule 7 (block_keyword -> IF .)
    RSQB            reduce using rule 7 (block_keyword -> IF .)
    COLON           reduce using rule 7 (block_keyword -> IF .)
    OPERATOR        reduce using rule 7 (block_keyword -> IF .)


state 15

    (16) suite -> stmt .

    NEWLINE         reduce using rule 16 (suite -> stmt .)
    ENDMARKER       reduce using rule 16 (suite -> stmt .)
    LBRACE          reduce using rule 16 (suite -> stmt .)
    RBRACE          reduce using rule 16 (suite -> stmt .)
    STRING_END      reduce using rule 16 (suite -> stmt .)
    STRING_CONTINUE reduce using rule 16 (suite -> stmt .)
    STRING          reduce using rule 16 (suite -> stmt .)
    STRING_START_TRIPLE reduce using rule 16 (suite -> stmt .)
    WS              reduce using rule 16 (suite -> stmt .)
    STRING_START_SINGLE reduce using rule 16 (suite -> stmt .)
    NUMBER          reduce using rule 16 (suite -> stmt .)
    NAME            reduce using rule 16 (suite -> stmt .)
    LPAR            reduce using rule 16 (suite -> stmt .)
    RPAR            reduce using rule 16 (suite -> stmt .)
    LSQB            reduce using rule 16 (suite -> stmt .)
    RSQB            reduce using rule 16 (suite -> stmt .)
    COLON           reduce using rule 16 (suite -> stmt .)
    OPERATOR        reduce using rule 16 (suite -> stmt .)
    CLASS           reduce using rule 16 (suite -> stmt .)
    DEF             reduce using rule 16 (suite -> stmt .)
    IF              reduce using rule 16 (suite -> stmt .)
    ELIF            reduce using rule 16 (suite -> stmt .)
    ELSE            reduce using rule 16 (suite -> stmt .)
    TRY             reduce using rule 16 (suite -> stmt .)
    EXCEPT          reduce using rule 16 (suite -> stmt .)
    FINALLY         reduce using rule 16 (suite -> stmt .)
    WITH            reduce using rule 16 (suite -> stmt .)
    WHILE           reduce using rule 16 (suite -> stmt .)
    FOR             reduce using rule 16 (suite -> stmt .)
    $end            reduce using rule 16 (suite -> stmt .)
    DEDENT          reduce using rule 16 (suite -> stmt .)


state 16

    (52) fragment -> RSQB .
